--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="es">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/png" href="https://fqpwkgrmifvfogxdzxaq.supabase.co/storage/v1/object/public/Kiana%20productos/logo-color.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Alimentos Kiana | Crecimiento y Nutrición</title>
     <script src="https://cdn.tailwindcss.com"></script>
